# iithlp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
iithlp/: __init__.py  convert.py  converter.py  core.py
iithlp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
iithlp/data/: extended_mappings.csv  mappings.csv  mappings.py
iithlp/data/mappings/: bengali.json  devanagari.json  gujarati.json  gurmukhi.json  kannada.json  malayalam.json  odia.json  tamil.json  telugu.json
iithlp/maps/: tamil_map.py  telugu_map.py
tests/: test_transliteration.py
