[build-system]
requires = ["setuptools>=42", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "iithlp"                          # The name on PyPI
version = "0.1.0"                        # Increase for new releases
description = "Transliteration of Indic scripts to IITHLP"
authors = [
  { name="Ramanan Sivasubramanian", email="ramanan93@gmail.com" }
]
readme = "README.md"                     # or "README.rst"
license = { file="LICENSE" }
keywords = ["transliteration", "SLP1", "indic", "iithlp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
iithlp = "iithlp.cli:main"               # So you can run "iithlp" from CLI
